--- a/css/style.css
+++ b/css/style.css
@@ -2409,6 +2409,13 @@ html.has-scroll-dragging {
   display: flex;
   width: calc(50% - 10px);
   flex-direction: column;
+  justify-content: space-between;
+  gap: 15px;
+}
+
+.canwedo__info_top {
+  display: flex;
+  flex-direction: column;
   gap: 15px;
 }
 
@@ -2447,7 +2454,6 @@ html.has-scroll-dragging {
 .canwedo__tags {
   display: flex;
   padding: 40px 10px 0;
-  margin: auto 0 0;
   flex-direction: column;
   gap: 10px;
 }
@@ -2666,6 +2672,10 @@ html.has-scroll-dragging {
   transform-origin: 50% 37.5px;
   -webkit-transition: -webkit-transform 0.5s linear;
   transition: transform 0.5s linear;
+}
+
+.history__subrotate_mobile {
+  display: none;
 }
 
 .history__button {
@@ -2910,6 +2920,7 @@ html.has-scroll-dragging {
 }
 
 .faq__desc {
+  max-width: 680px;
   padding: 0 0 75px;
 }
 
@@ -3838,7 +3849,36 @@ html.has-scroll-dragging {
     padding: 0 0 24px;
   }
   .faq__desc {
+    max-width: 580px;
     padding: 0 0 60px;
+  }
+
+  .history__date {
+    font-size: 124.59px;
+    line-height: 137.05px;
+  }
+  .history__rotate {
+    width: 500px;
+    height: 500px;
+  }
+  .history__information.active .history__button .history__text,
+  .history__button:hover .history__text {
+    width: 65px;
+    height: 65px;
+  }
+  .history__date {
+    height: 500px;
+    width: 500px;
+  }
+  .history___slider {
+    width: calc(40% - 10px);
+  }
+  .history__buttons {
+    width: calc(60% - 10px);
+  }
+
+  .canwedo__buttons {
+    gap: 10px 20px;
   }
 
   .footer__nav_list {
@@ -4425,6 +4465,9 @@ html.has-scroll-dragging {
     justify-content: space-between;
     align-items: flex-end;
   }
+  .canwedo__info_top {
+    max-width: 600px;
+  }
   .canwedo__wrapper {
     width: calc(50% - 10px);
   }
@@ -4436,7 +4479,10 @@ html.has-scroll-dragging {
 
   .history__block {
     margin: 60px 0;
-    min-height: 760px;
+    min-height: auto;
+  }
+  .history__date {
+    height: 100%;
   }
   .history__buttons {
     width: 100%;
@@ -4611,9 +4657,11 @@ html.has-scroll-dragging {
     padding: 15px 20px 15px 0;
   }
   .header__subsublink,
-  .header__subsublink:hover,
-  .header__sublink span {
+  .header__subsublink:hover {
     padding: 15px 20px 15px 30px;
+  }
+  .header__sublink span {
+    padding: 15px 0 15px 30px;
   }
   .header__subnav::before,
   .header__subsublink::before {
@@ -4729,6 +4777,17 @@ html.has-scroll-dragging {
     width: 100%;
   }
 
+  .canwedo__container {
+    padding: 0;
+  }
+  .canwedo__flex,
+  .canwedo__heading,
+  .canwedo__description,
+  .canwedo__link,
+  .canwedo__tags,
+  .canwedo__buttons {
+    padding: 0 20px;
+  }
   .canwedo__block {
     padding: 40px 0;
   }
@@ -4755,16 +4814,52 @@ html.has-scroll-dragging {
     width: 0px;
   }
 
-  .history__buttons {
-    justify-content: center;
+  .history__block {
+    margin: 40px 0;
   }
   .history__date {
-    height: 500px;
-    width: 500px;
+    width: 100%;
+  }
+  .history__heading {
+    display: none;
+  }
+  .history__buttons {
+    justify-content: center;
   }
   .history__navigation {
     margin: 0;
     justify-content: space-between;
+  }
+  .history__date {
+    font-size: 100px;
+    line-height: 110px;
+  }
+  .history__rotate {
+    width: 100%;
+    max-width: 500px;
+  }
+  .history__information.active .history__button .history__text,
+  .history__button:hover .history__text {
+    width: 48px;
+    height: 48px;
+  }
+  .history__subrotate_mobile {
+    display: flex;
+    padding: 30px 0 60px;
+    align-items: center;
+    justify-content: center;
+    gap: 15px;
+  }
+  .history__text_mobile {
+    display: flex;
+    width: 48px;
+    height: 48px;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--bg);
+    border: 1px solid var(--color);
+    border-radius: 50%;
+    text-align: center;
   }
 
   .policy__head {
@@ -4814,6 +4909,14 @@ html.has-scroll-dragging {
     font-size: 28px;
     line-height: 38.62px;
   }
+
+  .history__date {
+    font-size: 80px;
+    line-height: 90px;
+  }
+  .history__subrotate_mobile {
+    padding: 30px 0 40px;
+  }
 }
 /* end 460px */
 
@@ -4824,6 +4927,17 @@ html.has-scroll-dragging {
   .hero__head {
     font-size: 32px;
     line-height: 38.62px;
+  }
+
+  .history__date {
+    font-size: 60px;
+    line-height: 70px;
+  }
+  .history__information.active .history__button .history__text,
+  .history__button:hover .history__text,
+  .history__text_mobile {
+    width: 35px;
+    height: 35px;
   }
 }
 /* end 390px */
