--- a/css/style.css
+++ b/css/style.css
@@ -4033,7 +4033,7 @@ html.has-scroll-dragging {
   .header__nav_left,
   .header__nav_right {
     width: 100%;
-    height: 100vh;
+    height: var(--height);
     position: fixed;
     top: 0;
     background-color: var(--bg);
@@ -4052,7 +4052,7 @@ html.has-scroll-dragging {
   }
   .header__nav_left {
     max-width: 340px;
-    max-height: 100vh;
+    height: var(--height);
     flex-direction: column;
     left: 100%;
     z-index: 4;
@@ -4060,7 +4060,7 @@ html.has-scroll-dragging {
   }
   .header__nav_left .header__nav_scroll,
   .header__nav_right .header__nav_scroll {
-    max-height: calc(100vh - 80px);
+    max-height: calc(var(--height) - 80px);
     padding: 30px 0;
     gap: 0;
   }
@@ -4078,7 +4078,7 @@ html.has-scroll-dragging {
   }
   .header__nav_right {
     max-width: 340px;
-    max-height: 100vh;
+    max-height: var(--height);
     left: 100%;
     z-index: 5;
   }
@@ -4185,7 +4185,7 @@ html.has-scroll-dragging {
     padding: 30px 0;
   }
   .header__navigation_scroll {
-    max-height: 100vh;
+    max-height: var(--height);
     position: relative;
     z-index: 1;
     overflow-x: hidden;
