--- a/css/style.css
+++ b/css/style.css
@@ -95,9 +95,11 @@ input::-webkit-inner-spin-button {
 }
 
 html {
-  height: 100%;
+  height: 100vh;
   scroll-behavior: smooth;
   cursor: none;
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 html.noscroll {
@@ -244,15 +246,6 @@ section {
   width: 100%;
   background-color: transparent;
   overflow: hidden;
-}
-
-.page {
-  display: flex;
-  gap: 10px;
-}
-
-.page p {
-  color: var(--text-lgray);
 }
 
 
@@ -654,10 +647,6 @@ html.has-scroll-smooth {
 html.has-scroll-dragging {
   -webkit-user-select: none;
   user-select: none;
-}
-
-.has-scroll-smooth body {
-  overflow: hidden
 }
 
 .has-scroll-smooth [data-scroll-container] {
@@ -2757,10 +2746,6 @@ html.has-scroll-dragging {
   padding: 30px 0 90px;
 }
 
-.policy__block .page {
-  padding: 0 10px;
-}
-
 .policy__head {
   max-width: 1000px;
   padding: 70px 10px 120px;
@@ -3484,6 +3469,10 @@ html.has-scroll-dragging {
   overflow: hidden;
 }
 
+.globes__container {
+  padding: 0 90px;
+}
+
 .globes__back::before {
   content: "";
   width: 200%;
@@ -3575,12 +3564,18 @@ html.has-scroll-dragging {
   gap: 15px;
 }
 
+.globes__head,
+.globes__heading {
+  padding: 0 10px;
+}
+
 .globes__name {
+  padding: 0 10px;
   background: var(--bg-gray);
 }
 
 .globes__desc {
-  padding: 15px 0 0;
+  padding: 15px 10px 0;
 }
 
 .globes__description {
@@ -3960,10 +3955,10 @@ html.has-scroll-dragging {
 
 /* start vacancies */
 
-
 .hero__vacancies .hero__block {
   padding: 50px 0 0;
 }
+
 .hero__vacancies .hero__info {
   width: 40%;
 }
@@ -4080,6 +4075,52 @@ html.has-scroll-dragging {
 
 /* end vacancies */
 
+/* start breadcrumbs */
+
+.breadcrumbs {
+  margin: 1px 0;
+  opacity: 1;
+  border-bottom: 1px solid var(--border);
+}
+
+.breadcrumbs__list {
+  display: flex;
+  padding: 40px 0 0;
+  flex-wrap: wrap;
+  gap: 20px 0;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.breadcrumbs__item:not(:last-child):after {
+  content: "|";
+  display: inline-flex;
+  margin: 0 10px;
+}
+
+.breadcrumbs__link {
+  text-transform: uppercase;
+}
+
+.breadcrumbs__item:last-child  .breadcrumbs__link {
+  color: var(--text-gray);
+  pointer-events: none;
+}
+
+.breadcrumbs__back {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  text-transform: uppercase;
+  color: var(--text);
+}
+
+/* end breadcrumbs */
+
 /* start 1919px */
 @media (max-width: 1919px) {
   .container {
@@ -4145,10 +4186,14 @@ html.has-scroll-dragging {
   .header__nav_right .header__nav_scroll {
     padding: 30px 0;
   }
+
+  .breadcrumbs__list {
+    padding: 20px 0 0;
+  }
+
   .hero__back::before {
     bottom: calc(-100vh + 160px);
   }
-  
   .hero__block {
     padding: 40px 0 60px;
   }
@@ -4188,7 +4233,8 @@ html.has-scroll-dragging {
   .header__popup_container,
   .terminal_card__container,
   .terminal_characteristic__container,
-  .vacancies__container {
+  .vacancies__container,
+  .globes__container {
     padding: 0 60px;
   }
 
@@ -4412,7 +4458,8 @@ html.has-scroll-dragging {
   .header__popup_container,
   .terminal_card__container,
   .terminal_characteristic__container,
-  .vacancies__container {
+  .vacancies__container,
+  .globes__container {
     padding: 0 20px;
   }
 }
@@ -4608,14 +4655,6 @@ html.has-scroll-dragging {
 
   .form__buttons .btn {
     width: calc(100% - 50px);
-  }
-
-  .products_top__container,
-  .advantages__container,
-  .canwedo__container,
-  .policy__container,
-  .header__popup_container {
-    padding: 0 20px;
   }
 
   .border::before,
@@ -5425,7 +5464,8 @@ html.has-scroll-dragging {
   .header__popup_container,
   .terminal_card__container, 
   .terminal_characteristic__container,
-  .vacancies__container {
+  .vacancies__container,
+  .globes__container {
     padding: 0 10px;
   }
 
@@ -5713,11 +5753,6 @@ html.has-scroll-dragging {
   }
   .terminals_icon__subtitle {
     margin: 6px 0 0;
-  }
-
-  .page {
-    flex-wrap: wrap;
-    gap: 0 10px;
   }
 
   .terminal_card__top {
